# gemm-model

./: README.md  benchmark_gemm.py  perf_model.py  predict_gemm.py  pyproject.toml  util.py
config/: config.yaml
config/gpu/: b200.yaml
results/: dsv3_fp16.csv  dsv3_fp8.csv  dsv3_nvfp4.csv
results/fp16/: predictions_SOLModel.csv  predictions_WSPersistentGEMMModel.csv
results/fp8/: predictions_SOLModel.csv  predictions_WSPersistentGEMMModel.csv
results/nvfp4/: predictions_SOLModel.csv  predictions_WSPersistentGEMMModel.csv  predictions_WSPersistentGEMMModel_l2hit.csv
testlists/: dsv3.csv
